0.3.0 (unreleased)

    - fixed some security assertions

    - added "Test" tab for executing SQL queries directly

    - better error handling for ZMI screens

    - no longer depending on a pre-registered SQLAlchemy wrapper. SQLAlchemyDA
      now accepts (as any other DA) a DSN as property 'dsn'

    - DSN can be passed through the add form

    - redirect directly to "Info" tab after creating an instance through the ZMI

    - catching some low-level exceptions from the sqlite interface in order to
      make it work with SQLite

    - new properties 'transactional' and 'quoting_style'

    - improved support for Oracle and MySQL

0.2.1 (06.05.2007)

    - connections can be closed/opened through the ZMI

    - some code cleanup

    - fixed a *very* stupid typo causing ZODB conflict errors
 
0.2.0 (05.05.2007)

    - first public release

0.1.0 (30.04.2007)

    - initial coding